2013-12-27
1.webview loading view ActivityIndicatorStyle ActivityIndicator
2.submenu as one line
3.submenu highlight

2014-02-15
1.更改tab菜单
2.调整tab菜单样式
3.增加tabView的click事件，改变activeTab
4.调整tabView的click事件，加载数据