@@ -8,3 +8,4 @@
 2.调整tab菜单样式
 3.增加tabView的click事件，改变activeTab
 4.调整tabView的click事件，加载数据
+5.调整tabView的click事件，更改子菜单
